version = '2.0'

apply plugin: 'war'
apply plugin: 'idea'
apply plugin: 'eclipse-wtp'//构建web项目

sourceCompatibility = 1.8

jar {
    manifest {
        attributes 'Implementation-Title': 'Gradle Quickstart',
                   'Implementation-Version': version
    }
}

configurations { 
    mybatisGenerator
}

repositories {
    mavenCentral()
}



//统一编码为utf-8
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

dependencies {

	//测试
	testCompile group: 'junit', name: 'junit', version: '4.12'
	testCompile group: 'org.springframework', name: 'spring-test', version: '4.3.0.RELEASE'
	//spring
    compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.0.RELEASE'
    compile group: 'org.springframework', name: 'spring-orm', version: '4.3.0.RELEASE'
    compile group: 'org.springframework', name: 'spring-context-support', version: '4.3.0.RELEASE'
    compile	group: 'org.springframework', name: 'spring-web', version: '4.3.0.RELEASE'
    compile	group: 'org.springframework', name: 'spring-jdbc', version: '4.3.0.RELEASE'
    compile	group: 'org.springframework', name: 'spring-aop', version: '4.3.0.RELEASE'
    compile	group: 'org.springframework', name: 'spring-tx', version: '4.3.0.RELEASE'
    compile	group: 'org.springframework', name: 'spring-core', version: '4.3.0.RELEASE'
    compile	group: 'org.springframework', name: 'spring-aspects', version: '4.3.0.RELEASE'
    compile	group: 'org.springframework', name: 'spring-expression', version: '4.3.0.RELEASE'
    compile	group: 'org.springframework.data', name: 'spring-data-redis', version: '1.7.2.RELEASE'
    //日志
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.1.7'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
    compile group: 'ch.qos.logback', name: 'logback-access', version: '1.1.7'
    compile group: 'org.logback-extensions', name: 'logback-ext-spring', version: '0.1.4'
    //数据库
    compile group: 'redis.clients', name: 'jedis', version: '2.8.1'
	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.39'
    compile group: 'com.alibaba', name: 'druid', version: '1.0.20'
    compile group: 'org.mybatis', name: 'mybatis', version: '3.4.0'
    compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.0'
    //权限
    compile group: 'org.apache.shiro', name: 'shiro-spring', version: '1.2.5'
    //工具
    compile group: 'commons-io', name: 'commons-io', version: '2.5'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
	compile group: 'com.google.guava', name: 'guava', version: '19.0'
    
    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0-b01'
    compile group: 'jstl', name: 'jstl', version: '1.2'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
    
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.0.rc1'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.0.rc1'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.0.rc1'
    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
    compile group: 'org.freemarker', name: 'freemarker', version: '2.3.24-incubating'
    compile group: 'com.github.pagehelper', name: 'pagehelper', version: '4.1.6'
    compile group: 'com.github.jsqlparser', name: 'jsqlparser', version: '0.9.5'
    compile group: 'org.apache.lucene', name: 'lucene-core', version: '6.0.1'
	compile group: 'com.github.axet', name: 'kaptcha', version: '0.0.9'
	compile group: 'javax.websocket', name: 'javax.websocket-api', version: '1.1'
    
	//mapper生成
    mybatisGenerator group: 'org.mybatis.generator', name: 'mybatis-generator-core', version: '1.3.2'
    mybatisGenerator group: 'mysql', name: 'mysql-connector-java', version: '5.1.39'
    
}

//命令行：gradle mybatisGenerate
task mybatisGenerate << {
	ext{
	    def prop = new Properties();
	    file("src/main/resources/properties/jdbc.properties").withInputStream {
	        prop.load(it)
	    }
	    prop.each { 
	    	project.extensions.add("$it.key",it.value);
	    }
	}
    ext.destDir = new File(buildDir, '/mybatisFile/')
    destDir.mkdirs()
    ant.properties['targetProject'] = destDir.path
    ant.properties['driverClass'] = project['jdbc.driverClassName']
    ant.properties['connectionURL'] = project['jdbc.url']
    ant.properties['userId'] = project['jdbc.username']
    ant.properties['password'] = project['jdbc.password']
    ant.taskdef (
        name: 'mbgenerator',
        classname: 'org.mybatis.generator.ant.GeneratorAntTask',
        classpath: configurations.mybatisGenerator.asPath
    )
    ant.mbgenerator (overwrite: true,
        configfile: 'src/main/resources/generatorConfig.xml',verbose: true){
        propertyset {
            propertyref(name: 'targetProject')
            propertyref(name: 'driverClass')
            propertyref(name: 'connectionURL')
            propertyref(name: 'userId')
            propertyref(name: 'password')
        }
    }
}

test {
    systemProperties 'property': 'value'
}